# beeai-agent-python-sql

./: .env.example  .gitignore  Dockerfile  PROMPTS_DEMO.md  docker-compose.yml  pyproject.toml
infra/: 01-storage.yaml  02-code-interpreter.yaml  03-agent-deployment.yaml  04-postgres-secret.yaml.example  05-watsonx-secret.yaml.example  06-beeai-platform-config.yaml  DEPLOYMENT.md  README.md  code-interpreter.yaml
src/agentstack_agents/: agent.py  prompts.py
src/beeai_agents/: agent.py
src/tools/: README.md  __init__.py  db2_tool.py  psql_tool.py  python_tool.py
